analysis/low-level-api-fir/testData/lazyResolve/errors/anonymousObjectInInvalidPosition.kt
private val resolve<caret>Me: A = null = <expr>object : A<Int> {
    override fun x() {}
}</expr>

interface A<T> {
    fun x()
}
